--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -39,6 +39,10 @@
 		outline: 2px solid var(--color-accent);
 		outline-offset: -2px;
 	}
+	&:focus-visible:checked + .checkbox {
+		outline: 2px solid var(--color-accent-dim);
+		outline-offset: -2px;
+	}
 }
 
 .checkbox {
