--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -3,6 +3,5 @@
 .app {
 	max-width: to-rem(640);
 	margin-inline: auto;
-	padding-inline: to-rem(20);
-	padding-block: to-rem(20);
+	padding: to-rem(20);
 }
